# Vacancy_django

./: manage.py  pyproject.toml
companies/: urls.py  views.py
companies/migrations/: 0001_initial.py
lesson_27/: asgi.py  settings.py  urls.py  wsgi.py
vacancies/: models.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py
